--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     integrity="sha512-JSHeVYg/idYyOeVXdCXhYlA3jB85bDZF72trBMUX7yYNP+jmPngorfRmvPypwkpznfZL9IuIOuLHeYRSvmRdLw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" async></script>
   <script src='//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.min.js' async></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous" async></script>
 </head>
 
 <body>
